cloudflare-tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args:
        - tunnel
        - "--url"
        - "http://ingress-nginx-controller.ingress-nginx.svc.cluster.local"
        - "--no-autoupdate"
        # Removemos as Probes para o container não ser reiniciado durante o handshake
