backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-funcionarios
spec:
  replicas: 2 # Alta disponibilidade
  selector:
    matchLabels:
      app: api-funcionarios
  template:
    metadata:
      labels:
        app: api-funcionarios
    spec:
      containers:
      - name: api
        image: api-funcionarios:v1
        imagePullPolicy: Never # Importante para usar imagem local no Kind
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-funcionarios
  ports:
    - port: 80
      targetPort: 3000
