db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  clusterIP: None # Headless Service para DNS interno
  selector:
    app: db-funcionarios
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-funcionarios
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: db-funcionarios
  template:
    metadata:
      labels:
        app: db-funcionarios
    spec:
      # InitContainer para ajustar as permissões do volume (essencial no Linux)
      securityContext:
        fsGroup: 999

      containers:
      - name: postgres
        image: postgres:15-alpine
        securityContext:
          runAsUser: 999
          runAsNonRoot: true
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc
