system-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sistema-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Cloudflare já cuida do SSL
spec:
  ingressClassName: nginx
  rules:
  - http: # Sem a linha 'host:', ele aceita qualquer domínio apontado para o IP do Ingress
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
